--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,7 +7,8 @@
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="hideMinutesTab" [(ngModel)]="cronOptions.hideMinutesTab">
+            <input class="form-check-input" type="checkbox" id="hideMinutesTab"
+                [(ngModel)]="cronOptions.hideMinutesTab">
             <label class="form-check-label" for="hideMinutesTab">hideMinutesTab: {{cronOptions.hideMinutesTab}}</label>
         </div>
 
@@ -27,8 +28,10 @@
         </div>
 
         <div class="form-check">
-            <input class="form-check-input" type="checkbox" id="hideAdvancedTab" [(ngModel)]="cronOptions.hideAdvancedTab">
-            <label class="form-check-label" for="hideAdvancedTab">hideAdvancedTab: {{cronOptions.hideAdvancedTab}}</label>
+            <input class="form-check-input" type="checkbox" id="hideAdvancedTab"
+                [(ngModel)]="cronOptions.hideAdvancedTab">
+            <label class="form-check-label" for="hideAdvancedTab">hideAdvancedTab:
+                {{cronOptions.hideAdvancedTab}}</label>
         </div>
 
         <div class="form-check">
@@ -41,34 +44,37 @@
             <label class="form-check-label" for="removeSeconds">removeSeconds: {{cronOptions.removeSeconds}}</label>
         </div>
 
-    <div class="form-check">
-      <input class="form-check-input" type="checkbox" id="removeYears" [(ngModel)]="cronOptions.removeYears">
-      <label class="form-check-label" for="removeYears">removeYears: {{cronOptions.removeYears}}</label>
+        <div class="form-check">
+            <input class="form-check-input" type="checkbox" id="removeYears" [(ngModel)]="cronOptions.removeYears">
+            <label class="form-check-label" for="removeYears">removeYears: {{cronOptions.removeYears}}</label>
+        </div>
+        <div class="form-group">
+            <label>Language</label>
+            <select class="form-control-sm form-control input-sm" [(ngModel)]="language"
+                (ngModelChange)="onChangeLanguage($event)">
+                <option value="English">English</option>
+                <option value="Swedish" selected="selected">Swedish</option>
+            </select>
+        </div>
+        <div class="form-group">
+            <label>Style</label>
+            <select class="form-control-sm form-control input-sm" [(ngModel)]="style">
+                <option value="tabs">Tabs</option>
+                <option value="compact" selected="selected">Compact</option>
+            </select>
+        </div>
     </div>
-    <div class="form-group">
-      <label>Language</label>
-      <select class="form-control-sm form-control input-sm" [(ngModel)]="language" (ngModelChange)="onChangeLanguage($event)">
-        <option value="English">English</option>
-        <option value="Swedish" selected="selected">Swedish</option>
-      </select>
-    </div>
-    <div class="form-group">
-      <label>Style</label>
-      <select class="form-control-sm form-control input-sm" [(ngModel)]="style">
-        <option value="tabs">Tabs</option>
-        <option value="compact" selected="selected">Compact</option>
-      </select>
-    </div>
-  </div>
-  <div class="col-9 col-md-9">
+    <div class="col-9 col-md-9">
 
-    <cron-editor-tabs *ngIf="style == 'tabs'" [(cron)]="cronExpression" [disabled]="isCronDisabled" [options]="cronOptions"></cron-editor-tabs>
-    <cron-editor-compact *ngIf="style == 'compact'" [(cron)]="cronExpression" [disabled]="isCronDisabled" [options]="cronOptions"></cron-editor-compact>
+        <cron-editor-tabs *ngIf="style == 'tabs'" [(cron)]="cronExpression" [disabled]="isCronDisabled"
+            [options]="cronOptions"></cron-editor-tabs>
+        <cron-editor-compact *ngIf="style == 'compact'" [(cron)]="cronExpression" [disabled]="isCronDisabled"
+            [options]="cronOptions"></cron-editor-compact>
 
-    <hr />
-    <p>The resulting Cron expression: </p>
-    <div class="form-group mx-sm-3 mb-2">
-      <input type="text" class="form-control" [(ngModel)]="cronExpression">
+        <hr />
+        <p>The resulting Cron expression: </p>
+        <div class="form-group mx-sm-3 mb-2">
+            <input type="text" class="form-control" [(ngModel)]="cronExpression">
+        </div>
     </div>
-  </div>
 </div>
